--- a/indes.html
+++ b/indes.html
@@ -7,7 +7,7 @@
     <title>Git vezbe</title>
 </head>
 <body>
-    <h1>Git repozitorijum</h1>
+    <h1>it repozitorijum</h1>
     
 </body>
 </html>
